# RESEARCH-OS

./: .env.example  .env.local.example  .gitignore  .nojekyll  AGENTS.md  DEPLOY.md  README.md  index.html  pyproject.toml  requirements.txt
docs/: ITEEK_LEARN_BUILDER_PROJECT.md  ITEEK_ROUTER_IMPLEMENTATION.md  RESEARCH_OS_SELF_LEARNING.md
iteek-systems/: README.md
iteek-systems/docs/: ITEEK_LEARN_BUILDER_PROJECT.md  ITEEK_ROUTER_IMPLEMENTATION.md
iteek-systems/guides/: LEARN_QUICK_START.md  ROUTER_QUICK_START.md
iteek-systems/skills/iteek-learn-system/: SKILL.md
iteek-systems/skills/iteek-router-system/: SKILL.md
llm-os-builder-app/: README.md  index.html
llm-os-builder-app/css/: styles.css
llm-os-builder-app/js/: agent-config.js  api.js  app.js  file-generator.js  profile-builder.js  templates.js  troubleshoot.js
research-os/: index.html
research-os/js/: app.js
research_os/: cli.py  config.py  persona.py
research_os/core/: agent.py
research_os/memory/: learning_log.py
research_os/prompts/: system_prompt.md
research_os/providers/: openrouter.py
research_os/tools/: web_search.py
skills/iteek-learn-system/: SKILL.md
skills/openrouter-integration/: SKILL.md
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_learning_log.py  test_openrouter.py  test_web_search.py
