[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research-os"
version = "0.1.0"
description = "Ultimate AI Researcher & Builder agent, runnable against any OpenRouter model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "click>=8.1",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[project.scripts]
research-os = "research_os.cli:main"

[tool.setuptools.packages.find]
include = ["research_os*"]

[tool.setuptools.package-data]
research_os = ["prompts/*.md"]
